RESOLVED FIXED204819
The animation of returning to inline from PiP targets wrong destination rectangle
https://bugs.webkit.org/show_bug.cgi?id=204819
Summary The animation of returning to inline from PiP targets wrong destination recta...
Peng Liu
Reported 2019-12-03 15:58:25 PST
The animation of returning to inline from PiP targets wrong destination rectangle
Attachments
Patch (1.93 KB, patch)
2019-12-03 16:31 PST, Peng Liu
no flags
Peng Liu
Comment 1 2019-12-03 15:59:38 PST
Radar WebKit Bug Importer
Comment 2 2019-12-03 16:00:11 PST
Peng Liu
Comment 3 2019-12-03 16:28:58 PST
Peng Liu
Comment 4 2019-12-03 16:31:10 PST
WebKit Commit Bot
Comment 5 2019-12-03 18:37:01 PST
Comment on attachment 384767 [details] Patch Clearing flags on attachment: 384767 Committed r253081: <https://trac.webkit.org/changeset/253081>
WebKit Commit Bot
Comment 6 2019-12-03 18:37:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.